business page, about page phone version

--- a/app/about.html
+++ b/app/about.html
@@ -21,7 +21,7 @@
             <li class="header-menu__item"><a href="./about.html" id="logo">LOGO</a></li>
             <li class="header-menu__item"><a href="./about.html">Lite Такси</a></li>
             <li class="header-menu__item"><a href="./delivery.html"> Lite Доставка</a></li>
-            <li class="header-menu__item"><a href="">Lite Для Организаций</a></li>
+            <li class="header-menu__item"><a href="./business.html">Lite Для Организаций</a></li>
             <li class="header-menu__item"><a href="">Lite для водителей</a></li>
             <li class="header-menu__item"><a href=""> Блог</a></li>
           </ul>
@@ -143,14 +143,14 @@
             <h2>Напишите нам</h2>
             <p>Для любых вопросов и предложений заполните форму</p>
           </div>
-          <form action="">
+          <form class="workarea-form" action="">
             <div class="form__block">
-              <input type="text" placeholder="Имя*"/>
-              <input type="email" placeholder="Phone*"/>
-              <input type="tel" placeholder="Email"/>
+              <input class="workarea-form-input" type="text" placeholder="Имя*"/>
+              <input class="workarea-form-input" type="email" placeholder="Phone*"/>
+              <input class="workarea-form-input" type="tel" placeholder="Email"/>
             </div>
             <div class="form__block">
-              <textarea name="message" cols="30" rows="10" placeholder="Сообщение*"></textarea>
+              <textarea class="workarea-form-textarea" name="message" cols="30" rows="10" placeholder="Сообщение*"></textarea>
             </div>
             <input class="form-submit" type="submit" value="Отправить"/>
           </form>
