--- a/app/drivers.html
+++ b/app/drivers.html
@@ -35,39 +35,91 @@
         </div>
       </nav>
     </header>
-    <section class="index-section">
-      <div class="index-container">
-        <div class="input-form">
-          <div class="destination">
-            <div class="destination-from">
-              <input class="workarea-form-input" type="text" placeholder="Откуда*"/>
-            </div>
-            <div class="destination-to">
-              <input class="workarea-form-input" type="text" placeholder="Куда"/>
-            </div>
-          </div>
-          <div class="info">
-            <div class="info-phone">
-              <input class="workarea-form-input" type="tel" placeholder="Телефон"/>
-            </div>
-            <div class="info-time">
-              <input class="workarea-form-input" type="text" placeholder="Ближайшее время"/>
-            </div>
-            <div class="info-place">
-              <input class="workarea-form-input" type="text" placeholder="Подъезд"/>
-            </div>
-          </div>
-          <div class="coments">
-            <textarea class="workarea-form-textarea" name="" placeholder="Коментарий к заказу"></textarea>
+    <section class="drive-section drive-section1">
+      <div class="drive-sec1-bg"></div>
+      <div class="drive-sec1-overlay"></div>
+      <div class="drive-sec1-title-container">
+        <div class="drive-sec1-container">
+          <h1 class="drive-sec1-container__title">Лучшие водители выбирают Lite</h1>
+          <div class="drive-sec1-container__text">Подключайтесь к международному сервису такси и получайте заказы без простоя и холостого пробега.</div>
+        </div>
+      </div>
+    </section>
+    <section class="drive-section drive-section2">
+      <div class="drive-sec2-container">
+        <div class="drive-sec2-container__title">
+          <h1>Почему Lite?</h1>
+        </div>
+        <div class="drive-sec2-container__advantages">
+          <ul class="drive-sec2-advantages-list">
+            <li class="drive-sec2-advantages-item">
+              <div class="drive-sec2-advantages-item-icon"><img src="./img/icons/dr-icon1.png" alt=""/></div>
+              <div class="drive-sec2-advantages-item-title">Высокий доход</div>
+              <div class="drive-sec2-advantages-item-text">Частные и корпоративные поездки с высоким средним чеком</div>
+            </li>
+            <li class="drive-sec2-advantages-item">
+              <div class="drive-sec2-advantages-item-icon"><img src="./img/icons/dr-icon2.png" alt=""/></div>
+              <div class="drive-sec2-advantages-item-title">Награждение водителей</div>
+              <div class="drive-sec2-advantages-item-text">Подарки лучшим из лучшим по итогам каждого квартала</div>
+            </li>
+            <li class="drive-sec2-advantages-item">
+              <div class="drive-sec2-advantages-item-icon"><img src="./img/icons/dr-icon3.png" alt=""/></div>
+              <div class="drive-sec2-advantages-item-title">Брендированные авто</div>
+              <div class="drive-sec2-advantages-item-text">Специальные условия и повышенные тарифы</div>
+            </li>
+            <li class="drive-sec2-advantages-item">
+              <div class="drive-sec2-advantages-item-icon"><img src="./img/icons/dr-icon4.png" alt=""/></div>
+              <div class="drive-sec2-advantages-item-title">Лучшие водители</div>
+              <div class="drive-sec2-advantages-item-text">Средний рейтинг водителей 4,8 и выше</div>
+            </li>
+            <li class="drive-sec2-advantages-item">
+              <div class="drive-sec2-advantages-item-icon"><img src="./img/icons/dr-icon5.png" alt=""/></div>
+              <div class="drive-sec2-advantages-item-title">Лояльные клиенты</div>
+              <div class="drive-sec2-advantages-item-text">Дружелюбные и лояльные пассажиры</div>
+            </li>
+            <li class="drive-sec2-advantages-item">
+              <div class="drive-sec2-advantages-item-icon"><img src="./img/icons/dr-icon6.png" alt=""/></div>
+              <div class="drive-sec2-advantages-item-title">Программа лояльности</div>
+              <div class="drive-sec2-advantages-item-text">Скидка на топливо, мойки, питание и т.д.</div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section class="drive-section drive-section3">
+      <div class="drive-sec3-bg-left"></div>
+      <div class="drive-sec3-bg-right"></div>
+      <div class="drive-sec3-container">
+        <div class="drive-sec3-container1">
+          <div class="drive-sec3-container1__block">
+            <div class="drive-sec3-container1__icon"><img src="./img/svg/dr-review-icon.svg" alt="rew-icon"/></div>
+            <div class="drive-sec3-container1__text">"Lite действительно ценит водителей, создает все условия для нормальной работы" <br> <p>Роман</div>
           </div>
         </div>
-        <div class="butns">
-          <div class="order-btn"><a href="">
-              <input class="workarea-form-input" type="button" value="Вызвать Такси Онлайн"/></a></div>
-          <p class="butns__or">ИЛИ</p>
-          <div class="call-btn"><a href="tel:535">
-              <input class="workarea-form-input" type="button" value="Заказать такси по телефону: 535"/></a></div>
+        <div class="drive-sec3-container2">
+          <div class="drive-sec3-container2__block">
+            <div class="drive-sec3-container2-title">Присоединяйтесь к нам!</div><a class="drive-sec3-container2-button" href="#">Регистрация</a>
+          </div>
         </div>
+      </div>
+    </section>
+    <section class="drive-section drive-section4">
+      <div class="drive-sec4-container">
+        <h1 class="drive-sec4-container-title">Станьте лучшим водителем в городе</h1>
+        <ul class="drive-sec4-container-list">
+          <li class="drive-sec4-container-item">
+            <div class="drive-sec4-container-item__icon"><img src="./img/svg/section3-icon2.svg" alt=""/></div>
+            <div class="drive-sec4-container-item__title">Зарегистрируйтесь</div>
+          </li>
+          <li class="drive-sec4-container-item">
+            <div class="drive-sec4-container-item__icon"><img src="./img/svg/section3-icon1.svg" alt=""/></div>
+            <div class="drive-sec4-container-item__title">Скачайте бесплатное приложение</div>
+          </li>
+          <li class="drive-sec4-container-item">
+            <div class="drive-sec4-container-item__icon"><img src="./img/svg/section3-icon3.svg" alt=""/></div>
+            <div class="drive-sec4-container-item__title">Получайте заказы</div>
+          </li>
+        </ul>
       </div>
     </section>
     <footer>
