--- a/app/delivery.html
+++ b/app/delivery.html
@@ -22,7 +22,7 @@
             <li class="header-menu__item"><a href="./about.html">Lite Такси</a></li>
             <li class="header-menu__item"><a href="./delivery.html"> Lite Доставка</a></li>
             <li class="header-menu__item"><a href="./business.html">Lite Для Организаций</a></li>
-            <li class="header-menu__item"><a href="">Lite для водителей</a></li>
+            <li class="header-menu__item"><a href="./drivers.html">Lite для водителей</a></li>
             <li class="header-menu__item"><a href=""> Блог</a></li>
           </ul>
         </div>
